# uptime-rs

./: .envrc  .gitignore  .prettierrc  Cargo.toml  Rocket.toml  bun.lockb  database.db  database.db-shm  database.db-wal  readme.md  tailwind.config.js  todo.md
.github/workflows/: rust.yml
nix/: flake.nix  tools.nix
schemas/: monitor.sql
scripts/: build.sh  dev.sh  install-deps.sh  tailwind.sh
scripts/chart-js/: package.json  rollup.config.js
scripts/chart-js/src/: index.mjs
src/: database.rs  lib.rs  main.rs  ping.rs  routes.rs  templates.rs  time.rs  utils.rs
src/schemas/: monitor.sql  monitor_ping.sql  monitor_stats.sql
static/: chart.js  lib.js  styles.css
static/script/: lib.js
templates/: head.html  head.j2  index.html  index.j2  layout.html  macros.html  script.html  test.j2
templates/components/: create_monitor_result.html  edit_monitor.html  mobile_list_view.html  monitor_card.html  monitor_list.html  monitor_status_badge.html  monitors.html  up_status_card.html  uptime_graph.html
templates/views/: create_monitor.html  index.html  monitor.html
