[package]
name = "uptime-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
dotenv = "0.15.0"
rand = "0.8.5"
rocket = { version = "0.5.0", features = ["json"] }
serde = "1.0.202"
serde_json = "1.0.117"
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }
tokio = { version = "1.37.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4.38"
cronjob = "0.4.17"
