[package]
name = "uptime-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
dotenv = "0.15.0"
rand = "0.8.5"
rocket = { version = "0.5.0", features = ["json"] }
serde = "1.0.202"
serde_json = "1.0.117"
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }
tokio = { version = "1.37.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4.38"
askama = { version = "0.12.1", features = ["with-rocket"] }
askama_rocket = "0.12.0"
rocket_async_compression = "0.6.0"
minify-html-onepass = "0.15.0"
